only carosol remaining

--- a/index.html
+++ b/index.html
@@ -519,10 +519,10 @@
       </section>
       <!-- social section end -->
     </main>
-    <footer class=" hidden m-auto bg-black text-[rgba(255,255,255,0.60)] mt-24 h-[30rem]">
+    <footer class="m-auto bg-black text-[rgba(255,255,255,0.60)] mt-24 lg:h-[30rem] h-[70rem]">
      <div  class=" max-w-screen-lg m-auto">
-      <div class=" flex justify-between  ">
-        <div>
+      <div class=" flex justify-between flex-col lg:flex-row ml-14 lg:ml-0">
+        <div class="ml-10 lg:ml-0">
           <h1 class="text-3xl font-extrabold text-white mt-24">Get In Touch</h1>
         <p class="mt-4">Ready to connect? Get in touch with <br> us for inquiries, support, or <br> collaboration. We look forward to <br> hearing from you!</p>
         <div class="inline-flex gap-3 mt-6">
@@ -533,9 +533,10 @@
           <img src="./Images/footer (1).png" alt="">
           <p class=" text-white">(+62) 123-321-543</p></div>
       </div>
-        <div >
+        <div class="flex gap-10 lg:gap-16">
+          <div >
           <h2 class="text-3xl font-extrabold text-white mt-24">Company</h2>
-          <ul class="mt-7 space-y-4">
+          <ul class="mt-7 space-y-4 text-center">
           <li>About us</li>
           <li>Leadership</li>
           <li>Careers</li>
@@ -545,16 +546,17 @@
         </div>
         <div>
           <h2 class="text-3xl font-extrabold text-white mt-24">Support</h2>
-          <ul class="mt-7 space-y-4">
+          <ul class="mt-7 space-y-4 text-center">
           <li>Help Center</li>
           <li>FAQ</li>
           <li>Ticket Support</li>
           <li>Contact Us</li>
           </ul>
         </div>
-        <div>
+      </div>
+        <div class="ml-16 lg:ml-0">
           <h2 class="text-3xl font-extrabold text-white mt-24">Services</h2>
-          <ul class="mt-7 space-y-4">
+          <ul class="mt-7 space-y-4 ">
           <li>Academy</li>
           <li>Group Lesson</li>
           <li>Private Lesson</li>
