--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="flex lg:gap-6 lg:mt-20 flex-col lg:flex-row gap-6 ">
         <div>
           <div class="card lg:w-[100%] w-[90%] bg-base-100 shadow-xl image-full m-auto">
-            <figure><img src="./images/2.png" alt="playing" /></figure>
+            <figure><img src="./images/2.png" alt="hockey"></figure>
             <div class="card-body mt-12">
               <h2 class="text-3xl text-white font-extrabold">Junior Program</h2>
               <p class=" text-white text-base pt-5">Our Junior Program is designed for aspiring young players. Join us for a blend of fun, skill development,  fostering a lifelong love for hockey community.</p>
@@ -186,7 +186,7 @@
       <div>
         <div>
           <div class="card lg:w-[100%] w-[90%] bg-base-100 shadow-xl image-full m-auto">
-          <figure><img src="./images/3.png" alt="playing" /></figure>
+          <figure><img src="./images/3.png" alt="plying"></figure>
           <div class="card-body mt-12">
             <h2 class="text-3xl text-white font-extrabold">Teenager Program</h2>
             <p class=" text-white text-base">Engage in our dynamic Teenager Program, blending skill development and camaraderie. Elevate your game with expert coaching and a supportive community.</p>
@@ -391,7 +391,7 @@
 
         <div class="flex gap-8 p-6 border-2 rounded-xl flex-col lg:flex-row">
           <div >
-            <img src="./images/11.png" alt="question mark">
+           <img src="./images/11.png" alt="questions?">
           </div>
          <div class="lg:w-[60%] w-[100%]">
           <div class="join join-vertical w-full  rounded-none">
