--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       <!-- question part start -->
       <section>
         <div class="divider mt-24"></div> 
-        <div><h1 class=" text-center text-4xl font-extrabold ">Clients Question</h1>
+        <div><h1 class=" lg:block sm:block text-center text-2xl lg:text-4xl sm:text-base font-extrabold">Clients Question</h1>
         <p class="text-center m-auto w-[65%] text-base mt-6" >Have questions? Our dedicated client support team is here to assist you promptly with any inquiries or concerns you have</p></div>
         <div class="divider "></div>
 
@@ -458,7 +458,7 @@
       <section >
         <div>
           <div class="divider mt-24"></div> 
-        <div><h1 class=" text-center text-4xl font-extrabold ">Get In Touch</h1>
+        <div><h1 class="lg:block sm:block text-center text-2xl lg:text-4xl sm:text-base font-extrabold ">Get In Touch</h1>
         <p class="text-center m-auto w-[65%] text-base mt-6" >Get in touch with us for personalized assistance, inquiries, or collaboration. We're ready to connect and provide the best service.</p></div>
         <div class="divider "></div>
         </div>
