--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
       <!-- carousel starts-->
       <div class="carousel lg:w-full lg:mt-12 mt-6 w-[95%] ml-[11px] lg:ml-0 ">
-        <div id="slide1" class="carousel-item relative w-full rounded-xl bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('./images/1.png')] lg:h-[50vh] h-[200px]  ">
+        <div id="slide1" class="carousel-item relative w-full rounded-xl bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('images/1.png')] lg:h-[50vh] h-[200px]  ">
          <div> <div class=" lg:w-[502px] lg:h-[140px] bg-black text-white rounded-2xl p-4 transform translate-y-[320px] translate-x-[490px]">
           <h2 class="w-[90%] text-2xl font-extrabold">Meet all the heroes from the field</h2>
         <p class="mt-4">Encounter field heroes, where passion and skill collide, creating inspiring tales of sportsmanship and triumph on display</p>
@@ -98,7 +98,7 @@
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
         </div> 
-        <div id="slide2" class=" carousel-item relative w-full rounded-xl bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('./images/4.png')] lg:h-[50vh] ">
+        <div id="slide2" class=" carousel-item relative w-full rounded-xl bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('images/4.png')] lg:h-[50vh] ">
          <div class="flex justify-center">
           <div>
              <div class=" lg:w-[502px] lg:h-[140px] bg-black text-white rounded-2xl p-4 transform translate-y-[320px] translate-x-[490px]"">
@@ -108,7 +108,7 @@
       </div>
     </div>
           
-          <div class="absolute flex  mr-10 gap-3 transform -translate-y-1/2lg:left-10 lg:right-5 lg:bottom-2 left-[7.5rem] right-5 bottom-[1rem]">
+          <div class="absolute flex gap-3 transform -translate-y-1/2 lg:left-10 lg:right-5 lg:bottom-2 left-[7.5rem] right-5 bottom-[-1rem]">
             <a href="#slide1" class="btn btn-circle">❮</a> 
             <a href="#slide1" class="btn btn-circle">❯</a>
           </div>
@@ -173,7 +173,7 @@
       <div class="flex lg:gap-6 lg:mt-20 flex-col lg:flex-row gap-6 ">
         <div>
           <div class="card lg:w-[100%] w-[90%] bg-base-100 shadow-xl image-full m-auto">
-            <figure><img src="./images/2.png" alt="hockey"></figure>
+            <figure><img src="images/2.png" alt="hockey"></figure>
             <div class="card-body mt-12">
               <h2 class="text-3xl text-white font-extrabold">Junior Program</h2>
               <p class=" text-white text-base pt-5">Our Junior Program is designed for aspiring young players. Join us for a blend of fun, skill development,  fostering a lifelong love for hockey community.</p>
@@ -186,7 +186,7 @@
       <div>
         <div>
           <div class="card lg:w-[100%] w-[90%] bg-base-100 shadow-xl image-full m-auto">
-          <figure><img src="./images/3.png" alt="plying"></figure>
+          <figure><img src="images/3.png" alt="plying"></figure>
           <div class="card-body mt-12">
             <h2 class="text-3xl text-white font-extrabold">Teenager Program</h2>
             <p class=" text-white text-base">Engage in our dynamic Teenager Program, blending skill development and camaraderie. Elevate your game with expert coaching and a supportive community.</p>
