--- a/index.html
+++ b/index.html
@@ -243,9 +243,10 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3">
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 ">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
-        <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
+        <div class="inline-flex gap-2" >
+          <img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%] "> Delivery Fee : Free</p></div>
       </div>
      </div>
@@ -269,7 +270,7 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3">
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 ">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
@@ -295,7 +296,7 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">Cap For Hockeys</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3" >
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 " >
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
@@ -321,7 +322,7 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3">
+      <div class="lg:inline-flex gap-2 mt-2 pb-4">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
@@ -347,7 +348,7 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3">
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 ">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
@@ -373,7 +374,7 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3">
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 ">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
